--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,8 @@ dependencies {
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.github.bumptech.glide:glide:4.14.2'
 
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+
 }
